# livegrep

./: .bazelrc  .bazelrc.ci  .bazelrc.circle  .bazelrc.travis  .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILD  COPYING  Dockerfile  MODULE.bazel  Makefile  Makefile.lib  README.md  TODO  Vagrantfile  WORKSPACE  WORKSPACE.bzlmod  atomic.h  bootstrap_vagrant.sh  build.sh  chunk.cc  chunk.h  chunk_allocator.cc  chunk_allocator.h  codesearch.cc  codesearch.h  common.h  content.cc  content.h  debug.cc  debug.h  deploy.sh  dump_load.cc  go.mod  go.sum  indexer.cc  indexer.h  main.cc  (+18 more)
.circleci/: Dockerfile  build.sh  config.yml
blameworthy/: BUILD  gitops.go  gitops_test.go  indexer.go  indexer_test.go
client/: BUILD  client.go  client_test.go  retry.go  retry_test.go  types.go
cmd/: BUILD
config/: config.go
js/: .gitignore  appserver.js  backend.js  batch.js  config.local.js  log4js.json
jsonframe/: BUILD  jsonframe.go
k8s/: Dockerfile.index  Dockerfile.web  web.json
lg/: main.go
lib/: list.js  query-stats.js  stats.js
livegrep/: livegrep.go
munin/: cs_connections  cs_perf_  cs_qps
server/: BUILD  api.go  backend.go  backend_test.go  fileblame.go  fileview.go  fileview_test.go  json.go  protocol.go  protocol_test.go  query.go  query_test.go  request_log.go  search.go  server.go  server_test.go  templates.go
src/: BUILD  Makefrag  btree.cc  chunk.cc  chunk.h  chunk_allocator.cc  chunk_allocator.h  codesearch.cc  codesearch.h  common.h  content.cc  content.h  dump_load.cc  dump_load.h  fs_indexer.cc  fs_indexer.h  git_indexer.cc  git_indexer.h  indexer.cc  indexer.h  main.cc  query_planner.cc  query_planner.h  radix_sorter.h  re_width.cc  re_width.h  recursion.h  score.h  (+4 more)
(+242 files in other folders)
