module(
    name = "livegrep",
    version = "0.1",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")

bazel_dep(name = "grpc", version = "1.73.1")
bazel_dep(name = "protobuf", version = "31.1", repo_name='com_google_protobuf')
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.4.0")

bazel_dep(name = "libgit2", version = "1.9.0")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")

bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "boost.bind", version = "1.87.0")
bazel_dep(name = "boost.filesystem", version = "1.87.0")
bazel_dep(name = "boost.intrusive", version = "1.87.0")

bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_go", version = "0.55.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod="//:go.mod")
use_repo(
    go_deps,
    "com_github_bmizerany_pat",
    "com_github_google_go_github",
    "com_github_honeycombio_libhoney_go",
    "com_github_nelhage_go_cli",
    "in_gopkg_check_v1",
    "org_golang_google_grpc",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync"
)

bazel_dep(name = "aspect_rules_js", version = "2.4.0")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)

npm.npm_translate_lock(
    name = "npm",
    npmrc = "//web:.npmrc",
    pnpm_lock = "//web:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")
